test/test_units/test_kclvm/test_types/invalid_test_data/unique/unique_3.k
_a: int = 1
_a: str = "s"
